@@ -1,6 +1,7 @@
 * 2013-07-23 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 27476: Implicitly add internal user in change exceptions if missing from imported iCal 
+ - Fix for bug 27161: Pass DISTANT_FUTURE when deleting a folder via WebDAV 
 
 * 2013-07-22 - tobias.friedrich@open-xchange.com
 
